   cut -d ' ' -f 2 | uniq | sort -g | xargs echo | \
   perl -nle '$_=~s/\ /,/g; print "Copyright (C) $_ Genome Research Ltd."'

 - DBIx classes updated and new classes added by running scripts/make_schema.pl
   against the production database. cherrypicked_sample view is excluded from
   the database inspection, DBIx does not like the definition. 

release 6.15.0
 - Move from Travis CI to GitHub Actions.
 - If a WHERE clause in a SELECT query for the iseq_flowcell table
   specifies id_flowcell_lims, the query runs faster if the value
   is supplied as a string rather than an integer. If the value is
   supplied as an integer, the query cannot use the search index,
   resulting in a full table scan, during which the values in the
   id_flowcell_lims column are converted to doubles. Some of the
   values in the column are true strings which cannot be converted
   to doubles. Thousands of such values give thousands of warnings.
   To make queries more efficient, the id_flowcell_lims value
   in the WHERE part of the DBIx query is explicitly converted to
   strings. Clear difference can be seen when running the code
   with DBI_TRACE enabled.

release 6.14.0
 - add iseq_run table to enable
     a direct join between the iseq_flowcell ad iseq_run_status tables;
     to provide information about the run folder name
 - add hifi related columns to pac_bio_run_well_metrics table

release 6.13.0
 - add tables pac_bio_run_well_metrics and pac_bio_product_metrics 
   to store metrics extracted from PacBio's SMRT Link LIMS

release 6.12.0
 - a new iseq_product_ampliconstats table to store per sample
   per amplicon statistics that is generated by 'samtools
   ampliconstats'

release 6.11.0
 - iseq_heron_product_metrics table:
     set index on the id_run column,
     add pp_name and pp_version columns to capture info
     about the pipeline, which generated the data

release 6.10.0
 - add id_run column to the iseq_heron_product_metrics table